Added Names of Teammembers

--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -9,12 +9,14 @@
 	<header>
 		<img src="images/HFU-Logo.png">
 		<h1>Projekt: XXX</h1>
-		<h2>Semester: WS/SS 20XX</h2>
+		<h2>Semester: SS 2022</h2>
 		<b>Teammitglieder:</b>
 		<ul>
 			<li>Student 1 (Melih Aslan)</li>
-			<li>Student 2 (student.1@hs-furtwangen.de)</li>
-			<li>Student 3 (student.1@hs-furtwangen.de)</li>
+			<li>Student 2 (Leon Albrecht)</li>
+			<li>Student 3 (Jonas Zimmermann)</li>
+			<li>Student 3 (Bura Dogruoez)</li>
+			<li>Student 3 (Adham Sino)</li>
 		</ul>
 	</header>
 	<main>
