--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -15,7 +15,7 @@
 			<li>Student 1 (Melih Aslan)</li>
 			<li>Student 2 (Leon Albrecht)</li>
 			<li>Student 3 (Jonas Zimmermann)</li>
-			<li>Student 3 (Bura Dogruoez)</li>
+			<li>Student 3 (Burak Dogruoez)</li>
 			<li>Student 3 (Adham Sino)</li>
 		</ul>
 	</header>
