--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header>
 		<img src="images/HFU-Logo.png">
-		<h1>Projekt: XXX</h1>
+		<h1>Projekt: Schere Stein Papier</h1>
 		<h2>Semester: SS 2022</h2>
 		<b>Teammitglieder:</b>
 		<ul>
