--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -12,11 +12,11 @@
 		<h2>Semester: SS 2022</h2>
 		<b>Teammitglieder:</b>
 		<ul>
-			<li>Student 1 (Melih Aslan)</li>
-			<li>Student 2 (Leon Albrecht)</li>
-			<li>Student 3 (Jonas Zimmermann)</li>
-			<li>Student 4 (Burak Dogruoez)</li>
-			<li>Student 5 (Adham Sino)</li>
+			<li>Melih Aslan (melih.aslan@hs-furtwangen.de)</li>
+			<li>Leon Albrecht (leon.albrecht@hs-furtwangen.de)</li>
+			<li>Jonas Zimmermann (jonas.zimmermann@hs-furtwangen.de)</li>
+			<li>Burak Dogruoez (burak.dogruoez@hs-furtwangen.de)</li>
+			<li>Adham Sino (adham.sino@hs-furtwangen.de)</li>
 		</ul>
 	</header>
 	<main>
