--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -22,7 +22,31 @@
 	</header>
 	<main>
 		<h2>1. Projekt-Beschreibung</h2>
-		<p>TODO: Beschreibung des Projekts</p>
+		<p>	Das Projekt beschreibt ein Spiel namens Schere, Stein, Papier, bei dem ein Spieler gegen den Computer spielt.
+			Dabei kann der Spieler zwischen den Optionen Schere, Stein, Papier auswählen durch die Eingabe der Nummer 1 (Schere), 2 (Stein) oder 3 (Papier) aus. Der Computer wählt ebenfalls eine zufällige Zahl von 1 bis 3.
+		</p>
+		<p>	Dabei gelten folgende Regeln:
+		<ul>
+			<li>Schere schlägt Papier</li>
+			<li>Stein schlägt Schere</li>
+			<li>Papier schlägt Stein</li>
+		</ul>
+		</p>
+			Bei Gewinn einer Runde bekommt der Spieler oder der Computer jeweils einen Punkt. Wer zuerst die eingestellte Anzahl an Runden gewinnt, ist der Sieger.
+		<p>	Optional: Es besteht die Möglichkeit, anstatt drei, vier mögliche Merkmale auszuwählen, sodass neben Schere, Stein und Papier auch Brunnen eine Option ist.
+			Dabei gelten folgende Regeln:
+		<ul> 
+			<li>Schere schlägt Papier</li>
+			<li>Stein schlägt Schere</li>
+			<li>Papier schlägt Stein und Brunnen</li>
+			<li>Brunnen schlägt Schere und Stein</li>
+		</ul>
+		</p>
+			Aufgrund dessen, dass Brunnen nun Schere und Stein schlägt und somit die Chance höher ist zu gewinnen, gilt folgende zusätzliche Regel:
+		<ul>
+			<li>Wird Brunnen gewählt und man verliert, bekommt man einen Minuspunkt.</li>
+		</ul>
+		</p>
 		<h2>2. Features und Anforderungen</h2>
 		<p>TODO: Stellen Sie die aus Ihrer Sicht wichtigsten funktionalen Anforderungen (maximal 10) zusammen:</p>
 		<ul>
