--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -23,8 +23,10 @@
 	<main>
 		<h2>1. Projekt-Beschreibung</h2>
 		<p>	Das Projekt beschreibt ein Spiel namens Schere, Stein, Papier, bei dem ein Spieler gegen den Computer spielt.
-			Dabei kann der Spieler zwischen den Optionen Schere, Stein, Papier auswählen durch die Eingabe der Nummer 1 (Schere), 2 (Stein) oder 3 (Papier) aus. Der Computer wählt ebenfalls eine zufällige Zahl von 1 bis 3.
-		<p>	Dabei gelten folgende Regeln:
+			Dabei kann der Spieler zwischen den Optionen Schere, Stein, Papier auswählen durch die Eingabe der Nummer 1 (Schere), 2 (Stein) oder 3 (Papier) aus. 
+			Der Computer wählt ebenfalls eine zufällige Zahl von 1 bis 3.
+		<p>
+		<b>Dabei gelten folgende Regeln:</b>
 		<ul>
 			<li>Schere schlägt Papier</li>
 			<li>Stein schlägt Schere</li>
