Features und Anforderungen

--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -52,14 +52,21 @@
 		<p>TODO: Stellen Sie die aus Ihrer Sicht wichtigsten funktionalen Anforderungen (maximal 10) zusammen:</p>
 		<ul>
 			<li>Was soll Ihre Anwendung leisten?</li>
+				Die Anwendung soll Zufallszahlen generieren und vergleichen können.
+				Sie soll erkennen können wenn jemand 3 dreimal oder mehr gewonnen hat (muss nicht hintereinander sein). 
 			<li>Welche Dienste werden angeboten?</li>
+				Man soll auswählen können ob man Schere, Stein oder Papier nehmen will. In dem Fall wählt man die Ziffer 1,2 oder die 3.  
 			<li>Welche Eingangsdaten sind erforderlich? Zu welchen Ausgaben werden diese verarbeitet?</li>
+				Es muss Variablen für Symbol Spieler, Symbol Computer, Anzahl der Runden, Computer/Spieler gewinnt eine Runde und Anzahl der gewonennen Runden festgelegt werden.
 			<li>Wie soll sich das System in bestimmten Situationen verhalten?</li>
+				Das System soll aufhören, wenn einer eine bestimmte Anzahl an gewonennen Runden hat. 
 			<li>Welche Daten sind dauerhaft zu speichern?</li>
+				
 		</ul>
 		<p>TODO: Darüber hinaus sollen nicht-funktionale Anforderungen spezifiziert werden:</p>
 		<ul>
 			<li>Wie soll die Bedieneroberfläche aussehen?</li>
+				Es soll eine übersichtliche Oberfläche sein, mit Punktestand, Anzahl gespielten Runden, Textfeld was anzeigt ob es einen Sieger etc. gibt.
 			<li>In welcher Systemumgebung soll Ihr Programm lauffähig sein?</li>
 			<li>Mit welchen Entwicklungswerkzeugen wird gearbeitet?</li>
 		</ul>
