--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -52,7 +52,7 @@
 		<p>TODO: Stellen Sie die aus Ihrer Sicht wichtigsten funktionalen Anforderungen (maximal 10) zusammen:</p>
 		<ul>
 			<li>Was soll Ihre Anwendung leisten?</li>
-				Die Anwendung soll Zufallszahlen generieren und vergleichen können.
+				Die Anwendung soll Zufallszahlen generieren diese in einer der drei Variablen umwandeln und schlussendlich das Ergebnis auswerten und den Gewinner ermitteln.
 				Sie soll erkennen können wenn jemand 3 dreimal oder mehr gewonnen hat (muss nicht hintereinander sein). 
 			<li>Welche Dienste werden angeboten?</li>
 				Man soll auswählen können ob man Schere, Stein oder Papier nehmen will. In dem Fall wählt man die Ziffer 1,2 oder die 3.  
