--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -55,12 +55,14 @@
 				Die Anwendung soll Zufallszahlen generieren diese in einer der drei Variablen umwandeln und schlussendlich das Ergebnis auswerten und den Gewinner ermitteln.
 				Sie soll erkennen können wenn jemand 3 dreimal oder mehr gewonnen hat (muss nicht hintereinander sein). 
 			<li>Welche Dienste werden angeboten?</li>
-				Man soll auswählen können ob man Schere, Stein oder Papier nehmen will. In dem Fall wählt man die Ziffer 1,2 oder die 3.  
+				Man soll auswählen können ob man Schere, Stein oder Papier nehmen will. In dem Fall wählt man die Ziffer 1,2 oder die 3. 
+				Desweiteren sollte ausgewaehlt werden koennen wie viele Runden gewonnen werden sollen um die Runde zu gewinnen.   
 			<li>Welche Eingangsdaten sind erforderlich? Zu welchen Ausgaben werden diese verarbeitet?</li>
 				Es muss Variablen für Symbol Spieler, Symbol Computer, Anzahl der Runden, Computer/Spieler gewinnt eine Runde und Anzahl der gewonennen Runden festgelegt werden.
 			<li>Wie soll sich das System in bestimmten Situationen verhalten?</li>
-				Das System soll aufhören, wenn einer eine bestimmte Anzahl an gewonennen Runden hat. 
+				Das System soll aufhören, wenn einer eine bestimmte Anzahl an gewonnenen Runden hat. 
 			<li>Welche Daten sind dauerhaft zu speichern?</li>
+			    die Anzahl der gespielten Runden, die Anzahl der gewonnenen Runden
 				
 		</ul>
 		<p>TODO: Darüber hinaus sollen nicht-funktionale Anforderungen spezifiziert werden:</p>
@@ -69,6 +71,7 @@
 				Es soll eine übersichtliche Oberfläche sein, mit Punktestand, Anzahl gespielten Runden, Textfeld was anzeigt ob es einen Sieger etc. gibt.
 			<li>In welcher Systemumgebung soll Ihr Programm lauffähig sein?</li>
 			<li>Mit welchen Entwicklungswerkzeugen wird gearbeitet?</li>
+			Java
 		</ul>
 		<h2>3. Architektur</h2>
 		<p>TODO: Beschreibung der Software-Architektur inkl. Klassendiagramm z. B.:</p>
