--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -39,13 +39,13 @@
 		<ul> 
 			<li>Schere schlägt Papier</li>
 			<li>Stein schlägt Schere</li>
-			<li>Papier schlägt Stein und Brunnen</li>
-			<li>Brunnen schlägt Schere und Stein</li>
+			<li>Papier schlägt Stein </li>
+			<li></li>
 		</ul>
 		</p>
 			Aufgrund dessen, dass Brunnen nun Schere und Stein schlägt und somit die Chance höher ist zu gewinnen, gilt folgende zusätzliche Regel:
 		<ul>
-			<li>Wird Brunnen gewählt und man verliert, bekommt man einen Minuspunkt.</li>
+			<li></li>
 		</ul>
 		</p>
 		<h2>2. Features und Anforderungen</h2>
@@ -79,22 +79,22 @@
 
 		<div class="diagram">
 			classDiagram
-			class Animal {
+			class SchereSteinPapier {
 				int age
 				String gender
 				isMammal()
 				mate()
 			}
-			class Duck {
+			class Schere {
 				String beakColor
 				swim()
 				quack()
 			}
-			class Fish {
+			class Stein {
 				int sizeInFeet
 				canEat()
 			}
-			class Zebra {
+			class Papier {
 				bool is_wild
 				run()
 			}
@@ -103,7 +103,12 @@
 			Animal <|-- Zebra
 		</div>
 		<h2>4. Aufwandsschätzung und Aufteilung</h2>
-		<p>TODO: Schätzen Sie den Aufwand der verschiedenen Teile Ihres Programms ab und legen Sie fest, wie die Aufteilung auf die Gruppenmitglieder aussehen soll.</p>
+		<p>TODO: Schätzen Sie den Aufwand der verschiedenen Teile Ihres Programms ab und legen Sie fest, wie die Aufteilung auf die Gruppenmitglieder aussehen soll.
+			Etwaige Aufwandsschätzung in Stunden: 80h. 
+			Aufteilung: Melih: Variablen Initialisieren und Deklarieren & Bedingungen aufstellen fürs gewinnnen bzw verlieren.
+			Jonas: Ausgabe auf den Bildschirm und Spielanzahlcounter
+			Burak: Bedingungen aufstellen & Ausgabe auf den Bildschirm 
+		</p>
 		<h2>Optional: Verweis auf andere HTML Dateien</h2>
 		<p><a href="otherfile.html">Eine weitere HTML-Datei</a></p>
 	</main>
