--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -111,6 +111,7 @@
 		</p>
 		<h2>Optional: Verweis auf andere HTML Dateien</h2>
 		<p><a href="otherfile.html">Eine weitere HTML-Datei</a></p>
+		<img src=“https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.miss.at%2Fso-gewinnst-du-bei-schere-stein-papier-oefter%2F&psig=AOvVaw3Ddg8BJ_oosdVQE9LQUnQh&ust=1648836357181000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCMC6t5748PYCFQAAAAAdAAAAABAD“>.
 	</main>
 	<footer></footer>
 </body>
