--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -137,7 +137,7 @@
 		</div>
 		<h2>4. Aufwandsschätzung und Aufteilung</h2>
 		<p>TODO: Schätzen Sie den Aufwand der verschiedenen Teile Ihres Programms ab und legen Sie fest, wie die Aufteilung auf die Gruppenmitglieder aussehen soll.
-			Etwaige Aufwandsschätzung in Stunden: 80h. 
+		<br>Etwaige Aufwandsschätzung in Stunden: 80h. 
 			Aufteilung: Melih: Variablen Initialisieren und Deklarieren & Bedingungen aufstellen fürs gewinnnen bzw verlieren.
 			Jonas: Ausgabe auf den Bildschirm und Spielanzahlcounter
 			Burak: Bedingungen aufstellen & Ausgabe auf den Bildschirm 
