--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -23,7 +23,7 @@
 	<main>
 		<h2>1. Projekt-Beschreibung</h2>
 		<p>	Das Projekt beschreibt ein Spiel namens Schere, Stein, Papier, bei dem ein Spieler gegen den Computer spielt.
-			Dabei kann der Spieler zwischen den Optionen Schere, Stein, Papier auswählen durch die Eingabe der Nummer 1 (Schere), 2 (Stein) oder 3 (Papier) aus. 
+		<br>Dabei kann der Spieler zwischen den Optionen Schere, Stein, Papier auswählen durch die Eingabe der Nummer 1 (Schere), 2 (Stein) oder 3 (Papier) aus. 
 			Der Computer wählt ebenfalls eine zufällige Zahl von 0 bis 2.
 		<p>
 		<b>Dabei gelten folgende Regeln:</b>
@@ -53,10 +53,10 @@
 		<ul>
 			<li>Was soll Ihre Anwendung leisten?</li>
 				Die Anwendung soll Zufallszahlen generieren diese in einer der drei Variablen umwandeln und schlussendlich das Ergebnis auswerten und den Gewinner ermitteln.
-				Sie soll erkennen können wenn jemand 3 dreimal oder mehr gewonnen hat (muss nicht hintereinander sein). 
+			<br>Sie soll erkennen können wenn jemand 3 dreimal oder mehr gewonnen hat (muss nicht hintereinander sein). 
 			<li>Welche Dienste werden angeboten?</li>
 				Man soll auswählen können ob man Schere, Stein oder Papier nehmen will. In dem Fall wählt man die Ziffer 0,1 oder die 2. 
-				Desweiteren sollte ausgewaehlt werden koennen wie viele Runden gewonnen werden sollen um die Runde zu gewinnen.   
+			<br>Desweiteren sollte ausgewaehlt werden koennen wie viele Runden gewonnen werden sollen um die Runde zu gewinnen.   
 			<li>Welche Eingangsdaten sind erforderlich? Zu welchen Ausgaben werden diese verarbeitet?</li>
 				Es muss Variablen für Symbol Spieler, Symbol Computer, Anzahl der Runden, Computer/Spieler gewinnt eine Runde und Anzahl der gewonennen Runden festgelegt werden.
 			<li>Wie soll sich das System in bestimmten Situationen verhalten?</li>
