--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -10,6 +10,10 @@
 		<img src="images/HFU-Logo.png">
 		<h1>Projekt: Schere Stein Papier</h1>
 		<h2>Semester: SS 2022</h2>
+		<b>Teamführer:</b>
+		<ul>
+			<li>Leon Albrecht (leon.albrecht@hs-furtwangen.de)</li>
+		</ul>
 		<b>Teammitglieder:</b>
 		<ul>
 			
@@ -17,7 +21,6 @@
 			<li>Jonas Zimmermann (jonas.zimmermann@hs-furtwangen.de)</li>
 			<li>Burak Dogruoez (burak.dogruoez@hs-furtwangen.de)</li>
 			<li>Adham Sino (adham.sino@hs-furtwangen.de)</li>
-			<li>Leon Albrecht (leon.albrecht@hs-furtwangen.de)</li>
 		</ul>
 	</header>
 	<main>
