--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -489,10 +489,10 @@
 		<p>TODO: Schätzen Sie den Aufwand der verschiedenen Teile Ihres Programms ab und legen Sie fest, wie die Aufteilung auf die Gruppenmitglieder aussehen soll.
 		<br>Etwaige Aufwandsschätzung in Stunden: 80h. 
 		<br>Aufteilung: 
-		<br>Leon:
-		<br>Melih:
-		<br>Jonas: 
-		<br>Burak: 
+		<br>Leon:  Main Game	
+		<br>Melih: Main Game 
+		<br>Jonas: Features 
+		<br>Burak: Features 
 		<br>Adham: Erstellung der Bedieneroberfläche(GUI)
 		<br>
 		</p>
