--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -490,9 +490,9 @@
 		<br>Etwaige Aufwandsschätzung in Stunden: 80h. 
 		<br>Aufteilung: 
 		<br>Leon:  Main Game	
-		<br>Melih: Main Game 
-		<br>Jonas: Features 
-		<br>Burak: Features 
+		<br>Melih: Erstellung der Bedieneroberfläche(GUI) 
+		<br>Jonas: Main Game  
+		<br>Burak: Features + Verbesserungen 
 		<br>Adham: Erstellung der Bedieneroberfläche(GUI)
 		<br>
 		</p>
