--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -336,6 +336,8 @@
 			}
 			class JComponent {
 
+				Aufzählung von bereits implementierten Java Klassen
+
 			}
 			class Frame {
 
@@ -490,9 +492,9 @@
 		<br>Etwaige Aufwandsschätzung in Stunden: 80h. 
 		<br>Aufteilung: 
 		<br>Leon:  Main Game	
-		<br>Melih: Erstellung der Bedieneroberfläche(GUI) 
-		<br>Jonas: Main Game  
-		<br>Burak: Features + Verbesserungen 
+		<br>Melih: Main Game 
+		<br>Jonas: Features 
+		<br>Burak: Features 
 		<br>Adham: Erstellung der Bedieneroberfläche(GUI)
 		<br>
 		</p>
