--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -492,8 +492,8 @@
 		<br>Etwaige Aufwandsschätzung in Stunden: 80h. 
 		<br>Aufteilung: 
 		<br>Leon:  Main Game	
-		<br>Melih: Main Game 
-		<br>Jonas: Features 
+		<br>Melih: Erstellung der Bedieneroberfläche(GUI)
+		<br>Jonas: Main Game
 		<br>Burak: Features 
 		<br>Adham: Erstellung der Bedieneroberfläche(GUI)
 		<br>
