--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -494,7 +494,7 @@
 		<br>Leon:  Main Game	
 		<br>Melih: Erstellung der Bedieneroberfläche(GUI)
 		<br>Jonas: Main Game
-		<br>Burak: Features 
+		<br>Burak: Features + Verbesserungen
 		<br>Adham: Erstellung der Bedieneroberfläche(GUI)
 		<br>
 		</p>
