Features und Anforderungen

--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -56,21 +56,25 @@
 		<p>Funktionalen Anforderungen (maximal 10):</p>
 		<ul>
 			<li><b>Was soll Ihre Anwendung leisten?</b></li>
-				Die Anwendung soll Zufallszahlen generieren, diese in einer der drei Variablen umwandeln und schlussendlich das Ergebnis auswerten und den Gewinner ermitteln.
-			<br>Sie soll erkennen können, wer wie oft gewonnen hat (muss nicht hintereinander sein). 
+				Unsere Anwendung soll eine spaßvolles und übersichtliches Spiel sein, bei dem man entweder gegen den Computer spielt oder man gegen einen weiteren spieler auf dem selben Gerät spielen kann. 
+			<br>Dabei sind für den Spieler nur Symbole zu erkennen die als Eingabewerte erkannt, verglichen werden und somit das Ergebnis ausgewertet werden kann.
+			<br>Außerdem soll man ziwschen mehreren Modis auswählen können und Effekte sollen das Spielerlebnis eventuell ein wenig aufbessern.
+			<br>
 			<br><br>
 			<li><b>Welche Dienste werden angeboten?</b></li>
-				Man soll auswählen können ob man Schere, Stein oder Papier nehmen will. In dem Fall wählt man die Ziffer 1,2 oder die 3. 
-			<br>Desweiteren sollte ausgewählt werden können, wie viele Runden gewonnen werden sollen, um das gesamte Spiel zu gewinnen.
+				Man soll auswählen können ob man Schere, Stein oder Papier(Echse und Spock bei dem erweiterten Modi) nehmen will. In dem Fall klickt man auf die Symbole.
+			<br>Desweiteren sollte ausgewählt werden können, wie viele Runden gespielt werden sollen, welchen Modi man spielen will und gegen wen man antretet.(Spieler1/2 Namen auswählbar und eventuell hat der Computer auch einen Namen)
 			<br><br>  
 			<li><b>Welche Eingangsdaten sind erforderlich? Zu welchen Ausgaben werden diese verarbeitet?</b></li>
-				Es müssen Variablen für Symbol Spieler, Symbol Computer, Anzahl der Runden, Computer/Spieler gewinnt eine Runde und Anzahl der gewonennen Runden festgelegt werden.
+				Es müssen Variablen für die Symbole Spieler, Symbol Computer, Anzahl der Runden, Computer/Spieler gewinnt eine Runde und Anzahl der gewonennen Runden(etc.) festgelegt werden.
+			<br>Diese Eingangsdaten werden vom Spieler mit den Eingangsdaten des Computers verglichen, sodass das Ergebnis der Runde ermittelt werden kann.
+			<br>	
 			<br><br>
 			<li><b>Wie soll sich das System in bestimmten Situationen verhalten?</b></li>
-				Das System soll aufhören, wenn einer eine bestimmte Anzahl an gewonnenen Runden hat.
+				Das System soll aufhören, wenn einer eine bestimmte Anzahl an gewonnenen Runden hat, die auswählbar sind.
 			<br><br> 
 			<li><b>Welche Daten sind dauerhaft zu speichern?</b></li>
-			    die Anzahl der gespielten Runden, die Anzahl der gewonnenen Runden
+			    Die Anzahl der gespielten Runden, die Anzahl der gewonnenen Runden, die Symbole, die GUI.
 				
 		</ul>
 		<p>Nicht-funktionale Anforderungen:</p>
