--- a/1_Projektskizze/index.html
+++ b/1_Projektskizze/index.html
@@ -50,6 +50,10 @@
 			<li>Spock schlägt Schere und Stein</li>
 		</ul> 
 		</p>
+
+		<p>
+			<img src="https://static.wikia.nocookie.net/bigbangtheory/images/a/aa/Stein_Schere_Papier_Echse_Spock.jpg/revision/latest/scale-to-width-down/500?cb=20110727063646&path-prefix=de" height="200px">
+		</p>
 			
 		</p>
 		<h2>2. Features und Anforderungen</h2>
@@ -59,7 +63,6 @@
 				Unsere Anwendung soll eine spaßvolles und übersichtliches Spiel sein, bei dem man entweder gegen den Computer spielt oder man gegen einen weiteren spieler auf dem selben Gerät spielen kann. 
 			<br>Dabei sind für den Spieler nur Symbole zu erkennen die als Eingabewerte erkannt, verglichen werden und somit das Ergebnis ausgewertet werden kann.
 			<br>Außerdem soll man ziwschen mehreren Modis auswählen können und Effekte sollen das Spielerlebnis eventuell ein wenig aufbessern.
-			<br>
 			<br><br>
 			<li><b>Welche Dienste werden angeboten?</b></li>
 				Man soll auswählen können ob man Schere, Stein oder Papier(Echse und Spock bei dem erweiterten Modi) nehmen will. In dem Fall klickt man auf die Symbole.
@@ -67,8 +70,7 @@
 			<br><br>  
 			<li><b>Welche Eingangsdaten sind erforderlich? Zu welchen Ausgaben werden diese verarbeitet?</b></li>
 				Es müssen Variablen für die Symbole Spieler, Symbol Computer, Anzahl der Runden, Computer/Spieler gewinnt eine Runde und Anzahl der gewonennen Runden(etc.) festgelegt werden.
-			<br>Diese Eingangsdaten werden vom Spieler mit den Eingangsdaten des Computers verglichen, sodass das Ergebnis der Runde ermittelt werden kann.
-			<br>	
+			<br>Diese Eingangsdaten werden vom Spieler mit den Eingangsdaten des Computers verglichen, sodass das Ergebnis der Runde ermittelt werden kann.	
 			<br><br>
 			<li><b>Wie soll sich das System in bestimmten Situationen verhalten?</b></li>
 				Das System soll aufhören, wenn einer eine bestimmte Anzahl an gewonnenen Runden hat, die auswählbar sind.
@@ -81,10 +83,13 @@
 		<ul>
 			
 			<li><b>In welcher Systemumgebung soll Ihr Programm lauffähig sein?</b></li>
+				...
+			<br><br>
 			<li><b>Mit welchen Entwicklungswerkzeugen wird gearbeitet?</b></li>
 				HTML
 			<br>Java
 			<br>Java skript
+			<br><br>
 			<li><b>Wie soll die Bedieneroberfläche aussehen?</b></li>
 				Ein übersichtlicher Titelbildschirm, bei dem Einstellungen für das Spiel getätigt werden können, wie zum Beispiel Anzahl an Runden, Moduswahl, sowie Spielername Einagabe.
 			<br>Bei dem Spielbildschirm soll der jeweilige Punktestand, Auswahl an Objekte, sowie Textfelder der jeweiligen Aktionen (Objektauswahl, Sieger) angezeigt werden.
