--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -9,13 +9,15 @@
 	<header>
 		<img src="images/HFU-Logo.png">
 		<h1>Benutzerhandbuch</h1>
-		<h2>Projekt: </h2>
-		<h2>Semester: WS/SS 20XX</h2>
+		<h2>Projekt: Schere, Stein, Papier</h2>
+		<h2>Semester: SS 2022</h2>
 		<b>Teammitglieder:</b>
 		<ul>
-			<li>Student 1 (student.1@hs-furtwangen.de)</li>
-			<li>Student 2 (student.1@hs-furtwangen.de)</li>
-			<li>Student 3 (student.1@hs-furtwangen.de)</li>
+			<li>Melih Aslan (melih.aslan@hs-furtwangen.de)
+			<li>Jonas Zimmermann (jonas.zimmermann@hs-furtwangen.de)</li>
+			<li>Burak Dogruoez (burak.dogruoez@hs-furtwangen.de)</li>
+			<li>Adham Sino (adham.sino@hs-furtwangen.de)</li>
+			<li>Leon Albrecht (leon.albrecht@hs-furtwangen.de)</li>
 		</ul>
 	</header>
 	<main>
