--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -25,6 +25,14 @@
 		TODO: Benutzerhandbuch zur Verwendung Ihrer Anwendung
 	</main>
 	<footer></footer>
-	tewt
+ Altersempfehlung 5-99
+ Vorraussetzungen: PC/Laptop
+ Der Spieler entscheidet sich: 
+ - für einen Spielmodi.  
+ - die Anzahl der Runden die gespielt werden sollen.
+ - ob er gegen den Computer spielt, oder mit einem weiteren Spieler gegeneinander.
+"..."
+Anschließend klickt der Spieler auf Start und das Spielt beginnt mit den vom Spieler ausgewählten Bedingungen.
+Nach erfolgreichem Abschluss des Spiels besteht die Möglichkeit erneut zu spielen ODER das Spiel zu verlassen.
 </body>
 </html>
