--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -25,7 +25,7 @@
 		TODO: Benutzerhandbuch zur Verwendung Ihrer Anwendung
 	</main>
 	<footer></footer>
- Altersempfehlung 5-99
+ Altersempfehlung 5-99 <br />
  Vorraussetzungen: PC/Laptop
  Der Spieler entscheidet sich: 
  - für einen Spielmodi.  
