--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -26,13 +26,13 @@
 	</main>
 	<footer></footer>
  Altersempfehlung 5-99 <br />
- Vorraussetzungen: PC/Laptop
- Der Spieler entscheidet sich: 
- - für einen Spielmodi.  
- - die Anzahl der Runden die gespielt werden sollen.
- - ob er gegen den Computer spielt, oder mit einem weiteren Spieler gegeneinander.
-"..."
-Anschließend klickt der Spieler auf Start und das Spielt beginnt mit den vom Spieler ausgewählten Bedingungen.
-Nach erfolgreichem Abschluss des Spiels besteht die Möglichkeit erneut zu spielen ODER das Spiel zu verlassen.
+ Vorraussetzungen: PC/Laptop <br />
+ Der Spieler entscheidet sich: <br />
+ - für einen Spielmodi.  <br />
+ - die Anzahl der Runden die gespielt werden sollen. <br />
+ - ob er gegen den Computer spielt, oder mit einem weiteren Spieler gegeneinander. <br />
+... <br />
+Anschließend klickt der Spieler auf Start und das Spielt beginnt mit den vom Spieler ausgewählten Bedingungen. <br />
+Nach erfolgreichem Abschluss des Spiels besteht die Möglichkeit erneut zu spielen ODER das Spiel zu verlassen. <br />
 </body>
 </html>
