--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -28,9 +28,20 @@
 	<img src=“https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.miss.at%2Fwp-content%2Fuploads%2F2017%2F12%2Fshutterstock_175134956_1458817893380504_v0_l.jpg&imgrefurl=https%3A%2F%2Fwww.miss.at%2Fso-gewinnst-du-bei-schere-stein-papier-oefter%2F&tbnid=AaaFPwhTEfacPM&vet=12ahUKEwilu9u_wZz4AhUF8rsIHfIkDvMQMygCegUIARDaAQ..i&docid=K4Zy0p-t5S8i1M&w=990&h=660&q=schere%20stein%20papier&ved=2ahUKEwilu9u_wZz4AhUF8rsIHfIkDvMQMygCegUIARDaAQ “>
  Altersempfehlung 5-99 <br />
  Vorraussetzungen: PC/Laptop <br />
- Der Spieler entscheidet sich: <br />
- - für einen Spielmodi.  <br />
- - die Anzahl der Runden die gespielt werden sollen. <br />
+ Mit dem Betätigen der 'Spiel'-Taste, kommt man in das Menü des Spiels. <br />
+ Hier stehen dem Spieler verschiedene Modis zur Verfügung. <br />
+ Erst entscheidet man zwischen der Rundenanzahl. Hier wählt man zwischen Best of 3, Best of 5, Best of 7 aus. <br />
+ Best of 3: Derjenige, der aus 3 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
+ Best of 5: Derjenige, der aus 5 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
+ Best of 7: Derjenige, der aus 7 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
+ Als Nächstes wird der Modus ausgesucht. Hier kann man entweder den 'Normalen Modus' oder 'Mit Spock und Echse' wählen.<br />
+ 1: Normaler Modus: Normales 'Schere, Stein, Papier', indem Schere gegen Papier, Stein gegen Schere und Papier gegen Stein gewinnt.<br />
+ 2: Mit Spock und Echse: Zusätlich zu dem klassischen 'Schere, Stein, Papier' kommt hier Spock und Echse dazu. Hier gewinnt Stein gegen Echse, <br />
+Echse gegen Spock, Spock gegen Schere, Schere gegen Echse, Echse gegen Papier, <br />
+Papier gegen Spock, Spock gegen Stein, Stein gegen Schere. <br />
+Als Letztes wählt man die Anzahl der Spieler. <br />
+Hier kann man entweder das 'Spiel gegen Computer' oder das '2 Spieler' wählen. <br />
+Spiel gegen Computer: Hier wählt man <br />
  - ob er gegen den Computer spielt, oder mit einem weiteren Spieler gegeneinander. <br />
 ... <br />
 Anschließend klickt der Spieler auf Start und das Spielt beginnt mit den vom Spieler ausgewählten Bedingungen. <br />
