--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -41,8 +41,20 @@ Echse gegen Spock, Spock gegen Schere, Schere gegen Echse, Echse gegen Papier, <
 Papier gegen Spock, Spock gegen Stein, Stein gegen Schere. <br />
 Als Letztes wählt man die Anzahl der Spieler. <br />
 Hier kann man entweder das 'Spiel gegen Computer' oder das '2 Spieler' wählen. <br />
-Spiel gegen Computer: Hier wählt man <br />
- - ob er gegen den Computer spielt, oder mit einem weiteren Spieler gegeneinander. <br />
+Spiel gegen Computer:	Hier wählt der Spieler eines der Elemente aus. Der Computer wählt zufällig auch eines der Elemente aus.<br />
+						Dann kommt die Anzeige: 'Sie haben ... ausgewählt.' und 'Der Computer hat ... ausgewählt.'<br />. 
+						AUßerdem erscheint die Anzeige 'Du hast gewonnen :)', wenn der Spieler gewonnen hat oder die Anzeige 'Unentschieden', <br />
+						wenn beide dasselbe Element gewählt haben oder die Anzeige 'Du hast verloren :c', wenn der Computer diese Runde gewonnen hat.<br />
+
+2 Spieler:	Hier wählen zwei Spieler gleichzeitig durch verdecken deren Element und im nächsten Fenster entscheidet sich wer die Runde gewonnen hat. <br />
+
+
+
+
+
+
+
+						. <br />
 ... <br />
 Anschließend klickt der Spieler auf Start und das Spielt beginnt mit den vom Spieler ausgewählten Bedingungen. <br />
 Nach erfolgreichem Abschluss des Spiels besteht die Möglichkeit erneut zu spielen ODER das Spiel zu verlassen. <br />
