--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -22,7 +22,7 @@
 	</header>
 	<main>
 		<h2>Einleitung</h2>
-		TODO: Benutzerhandbuch zur Verwendung Ihrer Anwendung
+		Benutzerhandbuch zur Verwendung Ihrer Anwendung
 	</main>
 	<footer></footer>
 	<img src=“https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.miss.at%2Fwp-content%2Fuploads%2F2017%2F12%2Fshutterstock_175134956_1458817893380504_v0_l.jpg&imgrefurl=https%3A%2F%2Fwww.miss.at%2Fso-gewinnst-du-bei-schere-stein-papier-oefter%2F&tbnid=AaaFPwhTEfacPM&vet=12ahUKEwilu9u_wZz4AhUF8rsIHfIkDvMQMygCegUIARDaAQ..i&docid=K4Zy0p-t5S8i1M&w=990&h=660&q=schere%20stein%20papier&ved=2ahUKEwilu9u_wZz4AhUF8rsIHfIkDvMQMygCegUIARDaAQ “>
@@ -38,9 +38,11 @@
  <br />
  Als Nächstes wird der Modus ausgesucht. Hier kann man entweder den 'Normalen Modus' oder 'Mit Spock und Echse' wählen.<br />
  1: Normaler Modus: Normales 'Schere, Stein, Papier', indem Schere gegen Papier, Stein gegen Schere und Papier gegen Stein gewinnt.<br />
- 2: Mit Spock und Echse: Zusätlich zu dem klassischen 'Schere, Stein, Papier' kommt hier Spock und Echse dazu. Hier gewinnt Stein gegen Echse, <br />
-Echse gegen Spock, Spock gegen Schere, Schere gegen Echse, Echse gegen Papier, <br />
-Papier gegen Spock, Spock gegen Stein, Stein gegen Schere. <br />
+ 2: Mit Spock und Echse: Zusätlich zu dem klassischen 'Schere, Stein, Papier' kommt hier Spock und Echse dazu. <br />
+ Hier gewinnt Stein gegen Echse, <br />
+Echse gegen Spock, Spock gegen Schere, Schere gegen Echse, <br />
+Echse gegen Papier, Papier gegen Spock, <br />
+Spock gegen Stein, Stein gegen Schere. <br />
 Als Letztes wählt man die Anzahl der Spieler. <br />
 <br />
 Hier kann man entweder das 'Spiel gegen Computer' oder das '2 Spieler' wählen. <br />
