--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -26,7 +26,8 @@
 	</main>
 	<footer></footer>
 	<img src=“https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.miss.at%2Fwp-content%2Fuploads%2F2017%2F12%2Fshutterstock_175134956_1458817893380504_v0_l.jpg&imgrefurl=https%3A%2F%2Fwww.miss.at%2Fso-gewinnst-du-bei-schere-stein-papier-oefter%2F&tbnid=AaaFPwhTEfacPM&vet=12ahUKEwilu9u_wZz4AhUF8rsIHfIkDvMQMygCegUIARDaAQ..i&docid=K4Zy0p-t5S8i1M&w=990&h=660&q=schere%20stein%20papier&ved=2ahUKEwilu9u_wZz4AhUF8rsIHfIkDvMQMygCegUIARDaAQ “>
- Altersempfehlung 5-99 <br />
+	<img src=“papier_stein_schere1.svg“>
+	Altersempfehlung 5-99 <br />
  Vorraussetzungen: PC/Laptop <br />
  Mit dem Betätigen der 'Spiel'-Taste, kommt man in das Menü des Spiels. <br />
  Hier stehen dem Spieler verschiedene Modis zur Verfügung. <br />
