Bilder einfügen handbuch

--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -49,6 +49,12 @@
  <br />
  1: Normaler Modus: Normales 'Schere, Stein, Papier', indem Schere gegen Papier, Stein gegen Schere und Papier gegen Stein gewinnt.<br />
  <br />
+ <img src="./bilder/Schick-Schnack_Alamy.jpg"> <br />
+ <br />
+ <img src="./bilder/1ef4a407-e28f-4fb8-a78b-5a057ddd2288_w1280_r1.77_fpx30.03_fpy45.jpg"> <br /> 
+ <br />
+ <img src="./bilder/iStock_000003321329XSmall.jpg"> <br />
+ <br />
  2: Mit Spock und Echse: Zusätlich zu dem klassischen 'Schere, Stein, Papier' kommt hier Spock und Echse dazu. <br />
  Hier gewinnt Stein gegen Echse, <br />
 Echse gegen Spock, Spock gegen Schere, Schere gegen Echse, <br />
