--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -26,16 +26,17 @@
 	</main>
 	<footer></footer>
 
-	
-	Altersempfehlung 5-99 <br />
-=======
- "<img src="./bilder/shutterstock_175134956_1458817893380504_v0_l.jpg" title="Schere Stein papier" alt="schere" height="200px" width="400px">" <br />
-<img src="./bilder/Herunterladen.png"
+Schere Steın Papıer <br /> 
+
+<br />
+
+<img src="./bilder/papier_stein_schere1.jpg" width="150" height="150" border="0" alt="Papier Stein Schere">" <br />
+
 <br />
 
  Altersempfehlung 5-99 <br />
  <br />
->>>>>>> 0dcedfce9d4f1c319567351a27a03c344112428b
+
  Vorraussetzungen: PC/Laptop <br />
  <br />
  Mit dem Betätigen der 'Spiel'-Taste, kommt man in das Menü des Spiels. <br />
@@ -54,17 +55,42 @@
  <br />
  1: Normaler Modus: Normales 'Schere, Stein, Papier', indem Schere gegen Papier, Stein gegen Schere und Papier gegen Stein gewinnt.<br />
  <br />
- <img src="./bilder/Schick-Schnack_Alamy.jpg"> <br />
+ <img src="./bilder/schere-papier.jpg" width="150" height="150" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+ <img src="./bilder/schere-stein.jpg" width="150" height="150" border="0" alt="Schere Stein" style="margin:5px" align="left"> 
+ <img src="./bilder/stein-papier.jpg" width="150" height="150" border="0" alt="Stein Papier" style="margin:5px" align="left"> 
  <br />
- <img src="./bilder/1ef4a407-e28f-4fb8-a78b-5a057ddd2288_w1280_r1.77_fpx30.03_fpy45.jpg"> <br /> 
+
  <br />
- <img src="./bilder/iStock_000003321329XSmall.jpg"> <br />
  <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+
  2: Mit Spock und Echse: Zusätlich zu dem klassischen 'Schere, Stein, Papier' kommt hier Spock und Echse dazu. <br />
  Hier gewinnt Stein gegen Echse, <br />
 Echse gegen Spock, Spock gegen Schere, Schere gegen Echse, <br />
 Echse gegen Papier, Papier gegen Spock, <br />
 Spock gegen Stein, Stein gegen Schere. <br />
+<br />
+<img src="./bilder/rock.jpg" width="150" height="150" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/paper.jpg" width="150" height="150" border="0" alt="Schere Stein" style="margin:5px" align="left"> 
+<img src="./bilder/scissors.jpg" width="150" height="150" border="0" alt="Stein Papier" style="margin:5px" align="left"> 
+<img src="./bilder/spock.jpg" width="150" height="150" border="0" alt="Stein Papier" style="margin:5px" align="left"> 
+<img src="./bilder/lizard.jpg" width="150" height="150" border="0" alt="Stein Papier" style="margin:5px" align="left"> 
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <br />
 Als Letztes wählt man die Anzahl der Spieler. <br />
 <br />
